<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editNum"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="text"
        android:text="@string/text"
        android:textAlignment="textEnd"
        android:textSize="14pt"
        android:textStyle="bold" />

    <!--Buttons 7 to 9-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnDiv" />
    </LinearLayout>

    <!--Buttons 4 to 6-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnMult" />
    </LinearLayout>

    <!--Buttons 1 to 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnMinus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnDot" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnEqual"
            android:onClick="solve"/>

        <Button
            android:id="@+id/btnSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="12pt"
            android:text="@string/btnSum" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>